adding design pattern files

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="styles/main.css">
 
-      <script src="bower_components/modernizr/modernizr.js"></script>D
+      <script src="bower_components/modernizr/modernizr.js"></script>
     </head>
     <body>
         <div class='contaner'>
@@ -25,7 +25,7 @@
         </div>
 
         <!-- add slides here -->
-        <script type="text/javascript" src="scripts/something.js"></script>
+       
         <!-- build:js scripts/main.js -->
         <!-- endbuild -->
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
